<resources>
    <string name="app_name">Family Finance</string>
    <string name="person_activity_title">People</string>
    <string name="person_activity_edit_title">Person Edit</string>
    <string name="account_activity_title">Accounts</string>
    <string name="account_activity_edit_title">Account Edit</string>
    <string name="expense_article_activity_title">Expense Articles</string>
    <string name="income_article_activity_title">Income Articles</string>
    <string name="all_article_activity_title">All Articles</string>
    <string name="expense_article_activity_edit_title">Expense Article Edit</string>
    <string name="income_article_activity_edit_title">Income Article Edit</string>
    <string name="currency_activity_title">Currencies</string>
    <string name="currency_activity_edit_title">Currency Edit</string>
    <string name="exchange_rate_activity_title">Exchange Rates</string>
    <string name="exchange_rate_activity_edit_title">Exchange Rate Edit</string>
    <string name="expense_operation_activity_title">Expenses</string>
    <string name="expense_operation_activity_edit_title">Expense Edit</string>
    <string name="income_operation_activity_title">Incomes</string>
    <string name="income_operation_activity_edit_title">Income Edit</string>
    <string name="transfer_operation_activity_title">Transfers</string>
    <string name="transfer_operation_activity_edit_title">Transfer Edit</string>
    <string name="flow_of_funds_activity_title">Flow of Funds</string>
    <string name="template_activity_title">Templates</string>
    <string name="template_activity_edit_title">Template Edit</string>
    <string name="sms_pattern_activity_title">Sms Patterns</string>
    <string name="sms_pattern_activity_edit_title">Sms Pattern Edit</string>
    <string name="expense_operation_filter_title">Expenses Filter</string>
    <string name="income_operation_filter_title">Incomes Filter</string>
    <string name="transfer_operation_filter_title">Transfers Filter</string>
    <string name="flow_of_funds_operation_filter_title">Flow of Funds Filter</string>
    <string name="exchange_rate_filter_title">Exchange Rate Filter</string>
    <string name="settings_activity_title">Settings</string>
    <string name="backup_activity_title">Backup &amp; Restore</string>
    <string name="chart_activity_title">Reports</string>
    <string name="bar_chart_title">Expenses/Incomes</string>
    <string name="bar_chart_filter_title">Filter of Expenses/Incomes</string>
    <string name="bar_chart_display_title">Display of Expenses/Incomes</string>
    <string name="horizontal_bar_chart_of_expenses_title">Expenses by Articles</string>
    <string name="horizontal_bar_chart_of_incomes_title">Incomes by Articles</string>
    <string name="horizontal_bar_chart_of_expenses_filter_title">Filter of Expenses by Articles</string>
    <string name="horizontal_bar_chart_of_incomes_filter_title">Filter of Incomes by Articles</string>
    <string name="horizontal_bar_chart_of_expenses_display_title">Display of Expenses by Articles</string>
    <string name="horizontal_bar_chart_of_incomes_display_title">Display of Incomes by Articles</string>
    <string name="pie_chart_of_expenses_title">Expenses by Articles (Pie Chart)</string>
    <string name="pie_chart_of_incomes_title">Incomes by Articles (Pie Chart)</string>
    <string name="pie_chart_of_expenses_filter_title">Filter of Expenses by Articles (Pie Chart)</string>
    <string name="pie_chart_of_incomes_filter_title">Filter of Incomes by Articles (Pie Chart)</string>
    <string name="pie_chart_of_expenses_display_title">Display of Expenses by Articles (Pie Chart)</string>
    <string name="pie_chart_of_incomes_display_title">Display of Incomes by Articles (Pie Chart)</string>
    <string name="select_account">Accounts</string>
    <string name="select_expenses">Expenses</string>
    <string name="select_incomes">Incomes</string>
    <string name="select_transfers">Transfers</string>
    <string name="select_flow_of_funds">Flow of Funds</string>
    <string name="select_templates">Templates</string>
    <string name="select_sms_patterns">Sms Patterns</string>
    <string name="select_charts">Reports</string>
    <string name="backup_database_title">Database</string>
    <string name="backup_database">Backup the DB</string>
    <string name="restore_database">Restore the DB</string>
    <string name="backup_shared_prefs_title">Shared preferences</string>
    <string name="backup_shared_prefs">Backup the shared preferences</string>
    <string name="restore_shared_prefs">Restore the shared preferences</string>
    <string name="interface_preferences_title">Interface</string>
    <string name="interface_preferences_summary">Interface preferences</string>
    <string name="show_balance_on_operation_screens_preference_title">Balance on operation screens</string>
    <string name="show_balance_on_operation_screens_enabled_preference_summary">Show balance</string>
    <string name="show_balance_on_operation_screens_disabled_preference_summary">Hide balance</string>
    <string name="filter_preferences_title">Filter</string>
    <string name="filter_preferences_summary">Filter preferences</string>
    <string name="include_last_days_of_previous_month_on_start_date_preference_title">Include last days of the previous month in the start date</string>
    <string name="include_last_days_of_previous_month_on_start_date_enabled_preference_summary">Include last days of the previous month</string>
    <string name="include_last_days_of_previous_month_on_start_date_disabled_preference_summary">Start from the first day</string>
    <string name="number_of_included_last_days_preference_title">Number of last days included</string>
    <string name="database_preferences_title">Database</string>
    <string name="database_preferences_summary">Initial and default values</string>
    <string name="currency_id_preference_title">Default currency: %s</string>
    <string name="currency_id_preference_summary">Is used as default currency in the dialog for adding account and in the dialog for adding any operation.\nIt is not recommended to change</string>
    <string name="account_id_preference_title">Default account: %s</string>
    <string name="account_id_preference_summary">Is used as default account in the dialog for adding any operation</string>
    <string name="person_id_preference_title">Default person: %s</string>
    <string name="person_id_preference_summary">Is used as default person in the dialog for adding account</string>
    <string name="incomes_article_id_preference_title">Article of incomes: %s</string>
    <string name="incomes_article_id_preference_summary">Is used as root folder of incomes.\nIt is not recommended to change</string>
    <string name="expenses_article_id_preference_title">Article of expenses: %s</string>
    <string name="expenses_article_id_preference_summary">Is used as root folder of expenses.\nIt is not recommended to change</string>
    <string name="transfer_article_id_preference_title">Transfer article: %s</string>
    <string name="transfer_article_id_preference_summary">Is used as default transfer article.\nIt is not recommended to change</string>
    <string name="backup_preferences_title">Backup &amp; Restore</string>
    <string name="backup_preferences_summary">Backup preferences</string>
    <string name="backup_path_preference_title">Backup path</string>
    <string name="backup_path_preference_summary">Not specified</string>
    <string name="acra_preferences_title">ACRA</string>
    <string name="acra_preferences_summary">Application Crash Reports for Android</string>
    <string name="enable_acra_preference_title">Enable ACRA</string>
    <string name="acra_enabled_preference_summary">ACRA is enabled</string>
    <string name="acra_disabled_preference_summary">ACRA is disabled</string>
    <string name="sort">Sort</string>
    <string-array name="operation_sort_type">
        <item>By default</item>
        <item>By creation date</item>
        <item>By last change date</item>
    </string-array>
    <string-array name="account_type">
        <item>Undefined</item>
        <item>Cash</item>
        <item>Deposit</item>
        <item>Credit</item>
        <item>Debit Card</item>
        <item>Credit Card</item>
        <item>Virtual Debit Card</item>
        <item>Virtual Credit Card</item>
    </string-array>
    <string name="hint_name">Name</string>
    <string name="hint_name_required">Name (required)</string>
    <string name="hint_description">Description</string>
    <string name="hint_description_optional">Description &optional;</string>
    <string name="hint_url">URL</string>
    <string name="hint_url_optional">URL &optional;</string>
    <string name="hint_order_code">Order Code</string>
    <string name="hint_date">Date (ISO format)</string>
    <string name="hint_exchange_rate">Exchange Rate</string>
    <string name="hint_initial_balance">Initial Balance</string>
    <string name="hint_initial_balance_disabled">Initial Balance &disabled;</string>
    <string name="hint_default_value">Initial Default Value</string>
    <string name="hint_default_value_disabled">Initial Default Value &disabled;</string>
    <string name="hint_account_number">Account Number</string>
    <string name="hint_account_number_disabled">Account Number &disabled;</string>
    <string name="hint_payment_system">Payment System</string>
    <string name="hint_payment_system_disabled">Payment System &disabled;</string>
    <string name="hint_card_number">Card Number</string>
    <string name="hint_card_number_disabled">Card Number &disabled;</string>
    <string name="hint_currency">Currency</string>
    <string name="hint_currency_disabled">Currency &disabled;</string>
    <string name="hint_owner">Owner</string>
    <string name="hint_owner_disabled">Owner &disabled;</string>
    <string name="hint_to_whom_is_null">\'To Whom\' is empty</string>
    <string name="hint_to_whom">To Whom</string>
    <string name="hint_to_whom_disabled">To Whom &disabled;</string>
    <string name="hint_value">Value</string>
    <string name="hint_account">Account</string>
    <string name="hint_template_name">Template Name</string>
    <string name="hint_sender">Sender</string>
    <string name="hint_regex">Regular Expression</string>
    <string name="hint_date_group">Date Group</string>
    <string name="hint_value_group">Value Group</string>
    <string name="hint_common">Common</string>
    <string name="bar_chart_display_group">Group by:</string>
    <string name="bar_chart_display_group_by_days">Days</string>
    <string name="bar_chart_display_group_by_weeks">Weeks</string>
    <string name="bar_chart_display_group_by_months">Months</string>
    <string name="bar_chart_display_group_by_quarters">Quarters</string>
    <string name="bar_chart_display_group_by_years">Years</string>
    <string name="pie_chart_display_group_by">Group by:</string>
    <string name="pie_chart_display_group_by_article">Article</string>
    <string name="pie_chart_display_group_by_article_parent">Article parent</string>
    <string name="pie_chart_display_grouping">Grouping:</string>
    <string name="pie_chart_display_grouping_simple">Simple</string>
    <string name="pie_chart_display_grouping_limit">With limited group</string>
    <string name="pie_chart_display_view">View:</string>
    <string name="pie_chart_display_view_values">View values</string>
    <string name="pie_chart_display_use_percent_values">Use percent values</string>
    <string name="name_error">Invalid name</string>
    <string name="sender_error">Invalid sender</string>
    <string name="regex_error">Invalid regular expression</string>
    <string name="date_group_error">Invalid date group</string>
    <string name="value_group_error">Invalid value group</string>
    <string name="template_is_not_set_error">Template is not set</string>
</resources>