<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="display"
            type="io.github.zwieback.familyfinance.business.chart.display.BarChartDisplay"/>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/entity_edit_padding">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bar_chart_display_group"/>

                <RadioButton
                    android:id="@+id/group_by_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bar_chart_display_group_by_days"/>

                <RadioButton
                    android:id="@+id/group_by_weeks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bar_chart_display_group_by_weeks"/>

                <RadioButton
                    android:id="@+id/group_by_months"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bar_chart_display_group_by_months"/>

                <RadioButton
                    android:id="@+id/group_by_quarters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bar_chart_display_group_by_quarters"/>

                <RadioButton
                    android:id="@+id/group_by_years"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bar_chart_display_group_by_years"/>

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

</layout>
