<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="io.github.zwieback.familyfinance.core.model.constant.SmsPatternRestriction" />

        <import type="io.github.zwieback.familyfinance.core.model.constant.TemplateRestriction" />

        <import type="io.github.zwieback.familyfinance.extension.BigDecimalExtensionsKt" />

        <import type="io.github.zwieback.familyfinance.extension.IntExtensionsKt" />

        <variable
            name="smsPattern"
            type="io.github.zwieback.familyfinance.core.model.ISmsPattern" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/icon"
                    android:layout_width="@dimen/entity_edit_icon_size"
                    android:layout_height="@dimen/entity_edit_icon_size"
                    android:layout_margin="@dimen/entity_edit_margin"
                    app:ico_size="@dimen/entity_edit_icon_size"
                    app:iiv_icon="faw_comment1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.johnpetitto.validator.ValidatingTextInputLayout
                    android:id="@+id/name_layout"
                    android:layout_width="@dimen/zero_weight"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/entity_edit_margin"
                    android:hint="@string/hint_name_required"
                    app:errorEnabled="true"
                    app:errorLabel="@string/name_error"
                    app:errorTextAppearance="@style/AppTheme.ErrorTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:validateAfterTextChanged="true"
                    app:validator="not_empty">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textMultiLine"
                        android:maxLength="@{SmsPatternRestriction.NAME_MAX_LENGTH}"
                        android:text="@{smsPattern.name}" />

                </com.johnpetitto.validator.ValidatingTextInputLayout>

                <Switch
                    android:id="@+id/common"
                    android:layout_width="@dimen/zero_weight"
                    android:layout_height="wrap_content"
                    android:checked="@{smsPattern.common}"
                    android:text="@string/hint_common"
                    app:layout_constraintEnd_toEndOf="@id/name_layout"
                    app:layout_constraintStart_toStartOf="@id/name_layout"
                    app:layout_constraintTop_toBottomOf="@id/name_layout" />

                <com.johnpetitto.validator.ValidatingTextInputLayout
                    android:id="@+id/template_name_layout"
                    android:layout_width="@dimen/zero_weight"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/entity_edit_margin"
                    android:hint="@string/hint_template_name"
                    app:errorEnabled="true"
                    app:errorLabel="@string/template_is_not_set_error"
                    app:errorTextAppearance="@style/AppTheme.ErrorTextAppearance"
                    app:layout_constraintEnd_toStartOf="@+id/sender_layout"
                    app:layout_constraintStart_toStartOf="@id/icon"
                    app:layout_constraintTop_toBottomOf="@id/common"
                    app:validator="not_empty">

                    <io.github.zwieback.familyfinance.widget.ClearableEditText
                        android:id="@+id/template_name"
                        style="@style/AppTheme.EditText.Clearable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{smsPattern.template.name}"
                        app:readOnly="@{true}" />

                </com.johnpetitto.validator.ValidatingTextInputLayout>

                <com.johnpetitto.validator.ValidatingTextInputLayout
                    android:id="@+id/sender_layout"
                    android:layout_width="@dimen/zero_weight"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_sender"
                    app:errorEnabled="true"
                    app:errorLabel="@string/sender_error"
                    app:errorTextAppearance="@style/AppTheme.ErrorTextAppearance"
                    app:layout_constraintEnd_toEndOf="@id/common"
                    app:layout_constraintStart_toEndOf="@id/template_name_layout"
                    app:layout_constraintTop_toTopOf="@id/template_name_layout"
                    app:validateAfterTextChanged="true"
                    app:validator="not_empty">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="@{SmsPatternRestriction.SENDER_MAX_LENGTH}"
                        android:text="@{smsPattern.sender}" />

                </com.johnpetitto.validator.ValidatingTextInputLayout>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/template_name_and_sender_barrier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="template_name_layout,sender_layout"
                    app:layout_constraintTop_toBottomOf="@id/template_name_layout" />

                <com.johnpetitto.validator.ValidatingTextInputLayout
                    android:id="@+id/regex_layout"
                    android:layout_width="@dimen/zero_weight"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_regex"
                    app:errorEnabled="true"
                    app:errorLabel="@string/regex_error"
                    app:errorTextAppearance="@style/AppTheme.ErrorTextAppearance"
                    app:layout_constraintEnd_toEndOf="@id/sender_layout"
                    app:layout_constraintStart_toStartOf="@id/template_name_layout"
                    app:layout_constraintTop_toBottomOf="@id/template_name_and_sender_barrier"
                    app:validateAfterTextChanged="true"
                    app:validator="not_empty">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/regex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="@{SmsPatternRestriction.REGEX_MAX_LENGTH}"
                        android:text="@{smsPattern.regex}" />

                </com.johnpetitto.validator.ValidatingTextInputLayout>

                <com.johnpetitto.validator.ValidatingTextInputLayout
                    android:id="@+id/date_group_layout"
                    android:layout_width="@dimen/zero_weight"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_date_group"
                    app:errorEnabled="true"
                    app:errorLabel="@string/date_group_error"
                    app:errorTextAppearance="@style/AppTheme.ErrorTextAppearance"
                    app:layout_constraintEnd_toStartOf="@+id/value_group_layout"
                    app:layout_constraintStart_toStartOf="@id/regex_layout"
                    app:layout_constraintTop_toBottomOf="@id/regex_layout"
                    app:validator="signed_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number|numberSigned"
                        android:text="@{IntExtensionsKt.toStringOrEmpty(smsPattern.dateGroup)}" />

                </com.johnpetitto.validator.ValidatingTextInputLayout>

                <com.johnpetitto.validator.ValidatingTextInputLayout
                    android:id="@+id/value_group_layout"
                    android:layout_width="@dimen/zero_weight"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_value_group"
                    app:errorEnabled="true"
                    app:errorLabel="@string/value_group_error"
                    app:errorTextAppearance="@style/AppTheme.ErrorTextAppearance"
                    app:layout_constraintEnd_toEndOf="@id/regex_layout"
                    app:layout_constraintStart_toEndOf="@id/date_group_layout"
                    app:layout_constraintTop_toTopOf="@id/date_group_layout"
                    app:validator="signed_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/value_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number|numberSigned"
                        android:text="@{IntExtensionsKt.toStringOrEmpty(smsPattern.valueGroup)}" />

                </com.johnpetitto.validator.ValidatingTextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</layout>
